fixed error in delete Index
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2408 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -5,8 +5,9 @@
 <mx:Metadata>
 		[ResourceBundle("Tree")]
 </mx:Metadata>	
-<mx:Canvas id="main" width="100%" height="100%" backgroundColor="#ffffff">
 <mx:Canvas id="cnForIndex" width="100%" height="100%" >
+<mx:Canvas id="main" width="100%" height="100%" backgroundColor="#ffffff">
+
 
 
 	
@@ -30,6 +31,7 @@
 		
  	private var massTreeElements:Array = new Array();
 	private var massLines:Array = new Array();
+	private var masIndex:Array = new Array();
 	private var curTree:Object = new Object();
 	private var canLine:Canvas = new Canvas();
 	private var pnFrom:Point = new Point();
