--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -32,6 +32,7 @@
  	private var massTreeElements:Array = new Array();
 	private var massLines:Array = new Array();
 	private var masIndex:Array = new Array();
+	private var masMaxOfIndex:Array = new Array();
 	private var curTree:Object = new Object();
 	private var canLine:Canvas = new Canvas();
 	private var pnFrom:Point = new Point();
