--- a/IDE/Vdom/vdom/controls/TextToolBar.mxml
+++ b/IDE/Vdom/vdom/controls/TextToolBar.mxml
@@ -23,47 +23,23 @@
 	<mx:VBox left="5" top="5" right="5" bottom="5">
 	
 		<mx:HBox>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_bold.png')"
-				click="execCommand('Bold');" fontWeight="bold"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_italic.png')"
-				click="execCommand('Italic');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_underline.png')"
-				click="execCommand('Underline');" focusEnabled="false"/>
+			<mx:Button id="weightButton" styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_bold.png')"
+				click="changeWeight();" />
+			<mx:Button id="styleButton" styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_italic.png')"
+				click="changeStyle();"/>
+			<mx:Button id="decorationButton" styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_underline.png')"
+				click="changeDecoration();" focusEnabled="false"/>
 			<mx:VRule height="24"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_left.png')"
-				click="execCommand('JustifyLeft');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_center.png')"
-				click="execCommand('JustifyCenter');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_right.png')"
-				click="execCommand('JustifyRight');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_block.png')"
-				click="execCommand('JustifyFull');"/>
+			<mx:Button id="leftButton" styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_left.png')"
+				click="changeAlign('left');"/>
+			<mx:Button id="centerButton" styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_center.png')"
+				click="changeAlign('center');"/>
+			<mx:Button id="rightButton" styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_right.png')"
+				click="changeAlign('right');"/>
 			<mx:VRule height="24"/>
 			<mx:Label text="Font"/>
 			<mx:ComboBox id="fontSelector" styleName="toolbarComboBox"
-				height="24" width="100" focusEnabled="false">
-				<mx:dataProvider>
-				  <mx:ArrayCollection>
-			        <mx:Object label="Andale Mono" data="andale mono,times"/>
-			        <mx:Object label="Arial" data="arial,helvetica,sans-serif"/>
-			        <mx:Object label="Arial Black" data="arial black,avant garde"/>
-			        <mx:Object label="Book Antiqua" data="book antiqua,palatino"/>
-			        <mx:Object label="Comic Sans MS" data="comic sans ms,sans-serif"/>
-			        <mx:Object label="Courier New" data="courier new,courier"/>
-			        <mx:Object label="Georgia" data="georgia,palatino"/>
-			        <mx:Object label="Helvetica" data="helvetica"/>
-			        <mx:Object label="Impact" data="impact,chicago"/>
-			        <mx:Object label="Symbol" data="symbol"/>
-			        <mx:Object label="Tahoma" data="tahoma,arial,helvetica,sans-serif"/>
-			        <mx:Object label="Terminal" data="terminal,monaco"/>
-			        <mx:Object label="Times New Roman" data="times new roman,times"/>
-			        <mx:Object label="Trebuchet MS" data="trebuchet ms,geneva"/>
-			        <mx:Object label="Verdana" data="verdana,geneva"/>
-			        <mx:Object label="Webdings" data="webdings"/>
-			        <mx:Object label="Wingdings" data="wingdings,zapf dingbats"/>
-			      </mx:ArrayCollection>
-				</mx:dataProvider>			
-			</mx:ComboBox>
+				height="24" width="100" focusEnabled="false" />
 			<mx:VRule height="24"/>
 			<mx:Label text="Size"/>
 			<mx:ComboBox id="sizeSelector" styleName="toolbarComboBox"
