--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/dialogClasses/ImportStep4.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/dialogClasses/ImportStep4.mxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:controls="ExtendedAPI.com.controls.*">
+<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:controls="ExtendedAPI.com.controls.*"
+	creationComplete="onShow()">
 
 	<mx:Script>
 		<![CDATA[
@@ -16,8 +17,11 @@
 			static private function classConstruct():Boolean
 			{
 				LanguageManager.setSentences(defaultCaptions);
-				return true
-			}	
+				return true;
+			}
+			private function onShow():void
+			{								
+			}				
             
 		]]>
 	</mx:Script>
