git-svn-id: http://svn.vdombox.ru/flextools/trunk@2435 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edit/containers/ObjectsPanel.mxml
+++ b/IDE/Vdom/vdom/components/edit/containers/ObjectsPanel.mxml
@@ -81,10 +81,14 @@ xmlns:containers="vdom.components.edit.containers.*" >
 					xmlList.appendChild(findOjects(xmlLabel.Objects));
 					
 					xmlTreeData.addItem(xmlList);
-			} 
+				} 
+				
 				tree.dataProvider = xmlTreeData;
 				tree.validateNow();
-			} 
+			} else
+			{
+				tree.dataProvider = null;
+			}
 			
 		
 		}
