same change in Tree
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2448 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -504,7 +504,7 @@
 <mx:VBox>
 	<colorMenu02:ColorMenu2 id="colmen2"  />
 	<mx:CheckBox id="chExpandAll" label= "{resourceManager.getString('Tree','expand_all')}"  click="expandAll()"/>
-	<mx:CheckBox id="chShowSignature" label= "{resourceManager.getString('Tree','expand_all')}"
+	<mx:CheckBox id="chShowSignature" label= "{resourceManager.getString('Tree','show_signature')}"
 		  click="showSignature()"/>
 <mx:Button  label="{resourceManager.getString('Tree','auto_Spacing')}"    click="autoSpacing()"/>
 	<mx:Button  label="{resourceManager.getString('Tree','new_page')}"  
