git-svn-id: http://svn.vdombox.ru/flextools/trunk@2461 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edit/Edit.mxml
+++ b/IDE/Vdom/vdom/components/edit/Edit.mxml
@@ -19,9 +19,11 @@
 	
 	<editContainers:TypeAccordion id="types"
 		y="100" width="90" minWidth="90" maxWidth="90"
+		focusEnabled="false"
 		dropShadowEnabled="true"/>
 	
 		<containers:AdvancedTabNavigator id="mainArea"
+			focusEnabled="false"
 			width="100%" borderStyle="none">			
 			
 			<editContainers:WorkArea id="workArea" label="WYSIWYG" 
@@ -30,6 +32,7 @@
 				visible="false" />
 				
 			<editContainers:XMLPresentationEditor id="xmlEditor" label="VDOM XML"
+				focusEnabled="false"
 				dropShadowEnabled="true" borderStyle="solid"/>
 			
 		</containers:AdvancedTabNavigator>
