git-svn-id: http://svn.vdombox.ru/flextools/trunk@2468 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ListItem.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ListItem.mxml
@@ -45,6 +45,7 @@
 
 			public function set resource(source:Object):void {
 				loader.contentLoaderInfo.addEventListener(Event.COMPLETE, imageLoadComplete);
+				loader.contentLoaderInfo.addEventListener(IOErrorEvent.IO_ERROR, ioErrorHandler);
 				loader.loadBytes(source.data);
 			}
 			
@@ -56,6 +57,13 @@
 				__res.text = imageWidth.toString() + "x" + imageHeight.toString();				
 			}
 			
+			private function ioErrorHandler(ioEvent:IOErrorEvent):void {
+				[Embed(source="/assets/resourceBrowserIcons/resourceType/blank.png")]
+				var blank_Icon:Class;
+				
+				__image.source = blank_Icon; 
+			}
+
 			public function set objName(text:String):void { __name.text = text; }
 			
 			public function get objName():String { return __name.text; }
