table classes fix scroll fix
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2476 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/containers/ApplicationInformation.mxml
+++ b/IDE/Vdom/vdom/containers/ApplicationInformation.mxml
@@ -20,6 +20,9 @@
 			[Bindable]
 			private var _source:Object;
 			
+			private var defaultImage:Class =
+				Application.application.getStyle('appIconPersonalPages');
+			
 			public function set dataProvider(value:XML):void
 			{
 				if(!value)
@@ -30,7 +33,8 @@
 				
 				if(value.Icon == '')
 				{
-					_source = Application.application.getStyle('appIconPersonalPages');
+					_source = null; //<---- Error
+					_source = defaultImage;
 				}
 				else
 				{
