a lot of change in SOAP %)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2481 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edit/containers/ObjectsPanel.mxml
+++ b/IDE/Vdom/vdom/components/edit/containers/ObjectsPanel.mxml
@@ -85,6 +85,24 @@ xmlns:containers="vdom.components.edit.containers.*" >
 				
 				tree.dataProvider = xmlTreeData;
 				tree.validateNow();
+				
+//				trace(dataManager.currentObjectId +' : '+dataManager.currentApplicationId)
+				if(dataManager.currentObjectId == dataManager.currentApplicationId)
+				{
+					var currentElement:XML = xmlTreeData.source..Object.(@ID == dataManager.currentObjectId)[0];
+					openTree(currentElement);
+				
+					tree.selectedItem = currentElement;
+				
+				}else
+				{	
+					
+				}	
+				
+				var index:int =  tree.getItemIndex(tree.selectedItem);
+				tree.scrollToIndex(index);
+					
+				
 			} else
 			{
 				tree.dataProvider = null;
@@ -171,7 +189,7 @@ xmlns:containers="vdom.components.edit.containers.*" >
 			
 			var index:int =  tree.getItemIndex(tree.selectedItem);
 //			tree.selectedIndex = index;
-			tree.rowCount;
+//			tree.rowCount;
 			tree.scrollToIndex(index);
 			
 		}
